Add banner in webinterface to inform user about a newer version

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -21,6 +21,10 @@
 
 <body onload="javascript: PageReady();">
 
+  <div class="banner">
+    Neue Version verfügbar! Klicken Sie <a href="https://github.com/marcelGoerentz/Threadfin/releases/latest">hier</a>, um sie herunterzuladen.
+  </div>
+
   <div id="loading" class="modal fade">
     <div class="modal-dialog loader"></div>
   </div>
@@ -32,7 +36,8 @@
         <div class="modal-body">
           <div class="container-fluid">
             <div class="row">
-              <div id="popup-custom"></div>
+              <div id="popup-custom">
+              </div>
             </div>
           </div>
         </div>
@@ -131,6 +136,6 @@
   <script language="javascript" type="text/javascript" src="js/settings_ts.js"></script>
   <script language="javascript" type="text/javascript" src="js/logs_ts.js"></script>
   <script language="javascript" type="text/javascript" src="js/base_ts.js"></script>
+  <script language="javascript" type="text/javascript" src="js/banner.js"></script>
 </body>
-
 </html>
