--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
 <body onload="javascript: PageReady();">
 
   <div class="banner">
-    Neue Version verfügbar! Klicken Sie <a href="https://github.com/marcelGoerentz/Threadfin/releases/latest">hier</a>, um sie herunterzuladen.
+    New Version available! Click <a href="https://github.com/marcelGoerentz/Threadfin/releases/latest">here</a> to download.
   </div>
 
   <div id="loading" class="modal fade">
