First running version

--- a/html/index.html
+++ b/html/index.html
@@ -56,8 +56,11 @@
           <div class="container-fluid">
             <div class="row">
               <div class="card text-bg-dark mb-3">
-                <div class="card-body" id="checkbox_container">,
-                  <!-- Checkboxes will be added automatically -->
+                <div class="card-body" id="checkbox_container">
+                  Select one or more IP(s). If none has been selected then Threadfin will bind to all of them!
+                  <table id="checkboxTable">
+                    <!-- Checkboxes will be added automatically -->
+                  </table>
                 </div>
               </div>
             </div>
