--- a/html/index.html
+++ b/html/index.html
@@ -44,6 +44,38 @@
     </div>
   </div>
 
+  <div class="modal fade" id="versionModal" tabindex="-1" aria-labelledby="versionModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 class="modal-title" id="versionModalLabel">New Version Available</h3>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="card text-bg-dark mb-3">
+                <div class="card-body" id="checkbox_container">
+                  <table>
+                    <tbody>
+                      <tr>
+                        <td>A new version of the application is available. Please update to the latest version.</td>
+                        <td>
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="updateNow">Update Now</button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="modal fade" id="ip_selection">
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
@@ -161,12 +193,12 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js" integrity="sha512-7O5pXpc0oCRrxk8RUfDYFgn0nO1t+jLuIOQdOMRp4APB7uZ4vSjspzp5y6YDtDs4VzUSTbWzBFZ/LKJhnyFOKw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script language="javascript" type="text/javascript" src="js/network_ts.js"></script>
-  <script language="javascript" type="text/javascript" src="js/option_dialogue_ts.js"></script>
-  <script language="javascript" type="text/javascript" src="js/menu_ts.js"></script>
-  <script language="javascript" type="text/javascript" src="js/settings_ts.js"></script>
-  <script language="javascript" type="text/javascript" src="js/logs_ts.js"></script>
-  <script language="javascript" type="text/javascript" src="js/base_ts.js"></script>
-  <script language="javascript" type="text/javascript" src="js/banner.js"></script>
+  <script language="javascript" type="text/javascript" src="js/network.js"></script>
+  <script language="javascript" type="text/javascript" src="js/option_dialogue.js"></script>
+  <script language="javascript" type="text/javascript" src="js/menu.js"></script>
+  <script language="javascript" type="text/javascript" src="js/settings.js"></script>
+  <script language="javascript" type="text/javascript" src="js/logs.js"></script>
+  <script language="javascript" type="text/javascript" src="js/base.js"></script>
+  <script language="javascript" type="text/javascript" src="js/version_check.js"></script>
 </body>
 </html>
