--- a/html/configuration.html
+++ b/html/configuration.html
@@ -23,15 +23,14 @@
   <div id="popup" class="modal fade">
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
-        <div class="modal-header" id="popup_header"></div>
+        <div class="modal-header" id="popupHeader"></div>
         <div class="modal-body">
           <div class="container-fluid">
             <div class="row">
-              <div id="popup-custom"></div>
+              <div id="popupCustom"></div>
             </div>
           </div>
         </div>
-        <div class="modal-footer" id="popup_footer"></div>
       </div>
     </div>
   </div>
