--- a/html/index.html
+++ b/html/index.html
@@ -20,26 +20,22 @@
 
 <body onload="javascript: PageReady();">
 
-  <div class="banner">
-  </div>
-
   <div id="loading" class="modal fade">
     <div class="modal-dialog loader"></div>
   </div>
 
   <div id="popup" class="modal fade">
     <div class="modal-dialog modal-xl">
-      <div class="modal-content">
-        <div class="modal-header" id="popup_header"></div>
-          <div class="modal-body">
-            <div class="container-fluid">
-              <div class="row">
-                <div id="popup-custom">
+      <div class="modal-content" id="popupModalContent">
+        <div class="modal-header" id="popupHeader"></div>
+          <div class="modal-body" id="popupBody">
+            <div class="container-fluid" id="popupBodyContainer">
+              <div class="row" id="popupRow">
+                <div id="popupCustom">
                 </div>
               </div>
             </div>
           </div>
-        <div class="modal-footer" id="popup_footer"></div>
       </div>
     </div>
   </div>
@@ -66,31 +62,6 @@
                         </td>
                       </tr>
                     </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade" id="ip_selection">
-    <div class="modal-dialog modal-xl">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h3 class="modal-title">IP selection</h3>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="card text-bg-dark mb-3">
-                <div class="card-body" id="checkbox_container">
-                  Select one or more IP(s). If none has been selected then Threadfin will bind to all of them!
-                  <table id="checkboxTable">
-                    <!-- Checkboxes will be added automatically -->
                   </table>
                 </div>
               </div>
