--- a/html/create-first-user.html
+++ b/html/create-first-user.html
@@ -49,8 +49,8 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.10/clipboard.min.js"></script>
-  <script language="javascript" type="text/javascript" src="js/network_ts.js"></script>
-  <script language="javascript" type="text/javascript" src="js/authentication_ts.js"></script>
+  <script language="javascript" type="text/javascript" src="js/network.js"></script>
+  <script language="javascript" type="text/javascript" src="js/authentication.js"></script>
 </body>
 
 </html>
