--- a/html/index.html
+++ b/html/index.html
@@ -117,7 +117,7 @@
               <div class="card text-bg-dark mb 3">
                 <div class="card-header">Change Threadfin Version</div>
                 <div class="card-body">
-                  <input type="button" class="btn btn-primary" id="changeVersion" aria-describedby="basic-addon3"></input>
+                  <input type="button" class="btn btn-primary" id="changeVersion"/>
                 </div>
               </div>
             </div>
