51 add setting to change the version from release to beta and vice versa (#54)
* Add feature to change the Threadfin version within the web client
* Fix bug where CPU load was massive

Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/html/index.html
+++ b/html/index.html
@@ -114,6 +114,12 @@
                   <input type="text" class="form-control" id="xepg" aria-describedby="basic-addon3" readonly disabled>
                 </div>
               </div>
+              <div class="card text-bg-dark mb 3">
+                <div class="card-header">Change Threadfin Version</div>
+                <div class="card-body">
+                  <input type="button" class="btn btn-primary" id="changeVersion"/>
+                </div>
+              </div>
             </div>
           </div>
         </div>
