--- a/html/index.html
+++ b/html/index.html
@@ -40,38 +40,6 @@
     </div>
   </div>
 
-  <div class="modal fade" id="versionModal" tabindex="-1" aria-labelledby="versionModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h3 class="modal-title" id="versionModalLabel">New Version Available</h3>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="card text-bg-dark mb-3">
-                <div class="card-body" id="checkbox_container">
-                  <table>
-                    <tbody>
-                      <tr>
-                        <td>A new version of the application is available. Please update to the latest version.</td>
-                        <td>
-                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="updateNow">Update Now</button>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <div class="modal fade" id="server_information">
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
@@ -158,6 +126,12 @@
         <table class="table table-dark table-bordered caption-top" id="inactiveStreams"></table>
       </div>
     </div>
+  </div>
+
+  <div id="footer-banner" class="footer-banner">
+    <p id="footer-banner-text">A newer version of Threadfin is available. Please update to the latest version.</p>
+    <button type="button" class="btn btn-secondary" id="closeBannerButton">Dismiss</button>
+    <button type="button" class="btn btn-primary" id="updateNowButton">Update Now</button>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
