--- a/html/index.html
+++ b/html/index.html
@@ -45,7 +45,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h3 class="modal-title">Server Information</h3>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           <div class="container-fluid">
@@ -129,9 +129,14 @@
   </div>
 
   <div id="footer-banner" class="footer-banner">
-    <p id="footer-banner-text">A newer version of Threadfin is available. Please update to the latest version.</p>
-    <button type="button" class="btn btn-secondary" id="closeBannerButton">Dismiss</button>
-    <button type="button" class="btn btn-primary" id="updateNowButton">Update Now</button>
+    <div class="header d-flex justify-content-between align-items-center">
+      <h5 class="modal-title">Update notification</h5>
+      <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close" id="closeNotification"></button>
+    </div>
+    <div class="modal-body">
+        <p id="footer-banner-text">A newer version of Threadfin is available. Please update to the latest version.</p>
+        <button type="button" class="btn btn-primary" id="updateNowButton">Update Now</button>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
