--- a/web/public/index.html
+++ b/web/public/index.html
@@ -85,7 +85,7 @@
               <div class="card text-bg-dark mb 3">
                 <div class="card-header">Change Threadfin Version</div>
                 <div class="card-body">
-                  <input type="button" class="btn btn-primary" id="changeVersion"/>
+                  <input type="button" id="changeVersion"/>
                 </div>
               </div>
             </div>
@@ -128,14 +128,16 @@
     </div>
   </div>
 
-  <div id="footer-banner" class="footer-banner">
-    <div class="header d-flex justify-content-between align-items-center">
-      <h5 class="modal-title">Update notification</h5>
-      <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close" id="closeNotification"></button>
-    </div>
-    <div class="modal-body">
-        <p id="footer-banner-text">A newer version of Threadfin is available. Please update to the latest version.</p>
-        <button type="button" class="btn btn-primary" id="updateNowButton">Update Now</button>
+  <div id="notification_containter" class="notification">
+    <div class="content">
+      <div class="header d-flex justify-content-between align-items-center">
+        <h5 class="title">Update notification</h5>
+        <button type="button" class="btn-close btn-close-white" id="closeNotification"></button>
+      </div>
+      <div class="modal-body", style="border-radius: 10px;">
+          <p id="notification_text"></p>
+          <input type="button" style="margin-bottom: 5px;" id="updateNowButton"/>
+      </div>
     </div>
   </div>
 
