* Fix buffer storage initialization problem * Update web client * Fix styling issues * Prepare for internationalization
Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -131,7 +131,7 @@
   <div id="notification_containter" class="notification">
     <div class="content">
       <div class="header d-flex justify-content-between align-items-center">
-        <h5 class="title">Update notification</h5>
+        <h5 class="title" id="notification_title"></h5>
         <button type="button" class="btn-close btn-close-white" id="closeNotification"></button>
       </div>
       <div class="modal-body", style="border-radius: 10px;">
