--- a/web/public/index.html
+++ b/web/public/index.html
@@ -106,7 +106,7 @@
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0" id="main-menu">
         </ul>
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-          <li class="nav-link" data-bs-toggle="modal" data-bs-target="#server_information"><i class="fas fa-info-circle"></i> Server Information</li>
+          <li class="nav-link" data-bs-toggle="modal" data-bs-target="#server_information" id="server_information_button"><i class="fas fa-info-circle"></i> Server Information</li>
         </ul>
       </div>
     </div>
@@ -140,12 +140,13 @@
     </div>
   </div>
 
-  <button onclick="topFunction()" id="backToTop" title="Go to top">
-    <img src="icons/chevron-double-up.svg">
+  <button type="button" onclick="topFunction()" id="backToTop">
+    <img src="icons/chevron-double-up.svg" alt="Go to top">
   </button>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js" integrity="sha512-7O5pXpc0oCRrxk8RUfDYFgn0nO1t+jLuIOQdOMRp4APB7uZ4vSjspzp5y6YDtDs4VzUSTbWzBFZ/LKJhnyFOKw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script language="javascript" type="text/javascript" src="js/server_information.js"></script>
   <script language="javascript" type="text/javascript" src="js/network.js"></script>
   <script language="javascript" type="text/javascript" src="js/option_dialogue.js"></script>
   <script language="javascript" type="text/javascript" src="js/menu.js"></script>
