--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Threadfin</title>
   <!-- font-awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="css/screen.css" type="text/css">
   <link rel="stylesheet" href="css/base.css" type="text/css">
   <link rel="icon" href="img/threadfin.ico">
 </head>
 
-<body onload="javascript: PageReady();" class="" style="">
+<body onload="javascript: PageReady();">
 
   <div id="loading" class="modal fade">
     <div class="modal-dialog loader"></div>
@@ -34,19 +35,20 @@
     </div>
   </div>
 
-  <div class="modal fade" id="server_information" aria-hidden="true" style="display: none;"></div>
+  <div class="modal fade" id="server_information"></div>
   
-  <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-black" style="">
+  <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-black">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/web">
+      <a class="navbar-brand" href="/web" title="logo">
         <span id="logo"></span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mx-auto mb-2 mb-lg-0" id="main-menu"><li onclick="javascript: openThisMenu(this)" id="0" class="nav-item"><img src="img/m3u.png" alt="Wiedergabeliste"><p>Wiedergabeliste</p></li><li onclick="javascript: openThisMenu(this)" id="1" class="nav-item"><img src="img/xmltv.png" alt="XMLTV"><p>XMLTV</p></li><li onclick="javascript: openThisMenu(this)" id="2" class="nav-item"><img src="img/filter.png" alt="Filter"><p>Filter</p></li><li onclick="javascript: openThisMenu(this)" id="3" class="nav-item"><img src="img/mapping.png" alt="Zuordnung"><p>Zuordnung</p></li><li onclick="javascript: openThisMenu(this)" id="5" class="nav-item"><img src="img/settings.png" alt="Einstellungen"><p>Einstellungen</p></li><li onclick="javascript: openThisMenu(this)" id="6" class="nav-item"><img src="img/log.png" alt="Protokoll"><p>Protokoll</p></li></ul>
-        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav mx-auto mb-2 mb-lg-0" id="main-menu">
+        </ul>
+        <ul>
           <li class="nav-link" data-bs-toggle="modal" data-bs-target="#server_information" id="server_information_button"><i class="fas fa-info-circle"></i> Server Information</li>
         </ul>
       </div>
@@ -74,14 +76,14 @@
         <h5 class="title" id="notification_title"></h5>
         <button type="button" class="btn-close btn-close-white" id="closeNotification"></button>
       </div>
-      <div class="modal-body" ,="" style="border-radius: 10px;">
+      <div class="modal-body notificationContent">
           <p id="notification_text"></p>
-          <input type="button" style="margin-bottom: 5px;" id="updateNowButton">
+          <input type="button" class="updateNow" id="updateNowButton">
       </div>
     </div>
   </div>
 
-  <button type="button" onclick="topFunction()" id="backToTop" title="Gehe nach oben">
+  <button type="button" onclick="topFunction()" id="backToTop">
     <img src="icons/chevron-double-up.svg" alt="Go to top">
   </button>
 
