Enhance the web client
Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" href="img/threadfin.ico">
 </head>
 
-<body onload="javascript: PageReady();">
+<body onload="PageReady();">
 
   <div id="loading" class="modal fade">
     <div class="modal-dialog loader"></div>
@@ -70,7 +70,7 @@
     </div>
   </div>
 
-  <div id="notification_containter" class="notification">
+  <div id="notification_container" class="notification">
     <div class="content">
       <div class="header d-flex justify-content-between align-items-center">
         <h5 class="title" id="notification_title"></h5>
