--- a/web/public/configuration.html
+++ b/web/public/configuration.html
@@ -5,16 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Threadfin</title>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-  />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="css/screen.css" type="text/css">
   <link rel="stylesheet" href="css/base.css" type="text/css">
 </head>
 
-<body onload="javascript: readyForConfiguration(0);">
+<body onload="readyForConfiguration(0);">
 
   <div id="loading" class="modal fade">
     <div class="modal-dialog loader"></div>
@@ -46,16 +43,16 @@
 
     </div>
     <div id="box-footer">
-      <input id="next" class="" type="button" name="next" value="Next" onclick="javascript: saveWizard();">
+      <input id="next" class="" type="button" name="next" value="Next" onclick="saveWizard();">
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.10/clipboard.min.js"></script>
-  <script language="javascript" type="text/javascript" src="js/configuration_ts.js"></script>
-  <script language="javascript" type="text/javascript" src="js/network_ts.js"></script>
-  <script language="javascript" type="text/javascript" src="js/menu_ts.js"></script>
-  <script language="javascript" type="text/javascript" src="js/settings_ts.js"></script>
-  <script language="javascript" type="text/javascript" src="js/base_ts.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js" integrity="sha512-7O5pXpc0oCRrxk8RUfDYFgn0nO1t+jLuIOQdOMRp4APB7uZ4vSjspzp5y6YDtDs4VzUSTbWzBFZ/LKJhnyFOKw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script language="javascript" type="text/javascript" src="js/configuration.js"></script>
+  <script language="javascript" type="text/javascript" src="js/network.js"></script>
+  <script language="javascript" type="text/javascript" src="js/menu.js"></script>
+  <script language="javascript" type="text/javascript" src="js/settings.js"></script>
+  <script language="javascript" type="text/javascript" src="js/base.js"></script>
 </body>
 
 </html>
